<resources>
    <string name="app_name">Not So Chubby</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_exercice">Treinos</string>
    <string name="nav_diet">Dieta</string>
    <string name="nav_calendar">Agenda</string>
    <string name="nav_map">Mapa</string>
    <string name="nav_game">Chubby Go Wild</string>
    <string name="nav_news">Notícias</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_notifications">Notificações</string>
    <string name="nav_config">Configurações</string>
    <string name="nav_exit">Sair</string>
    <string name="generate">Gerar</string>
    <string name="diet_breakfast">Pequeno-Almoco</string>
    <string name="diet_brunch">Lanche da Manha</string>
    <string name="diet_lunch">Almoco</string>
    <string name="diet_afterLunch">Lanche</string>
    <string name="diet_dinner">Jantar</string>
    <string name="diet_supper">Ceia</string>
    <string name="exercise_abdominal">Abdominais</string>
    <string name="exercise_back">Costas</string>
    <string name="exercise_biceps">Biceps</string>
    <string name="exercise_chest">Peito</string>
    <string name="exercise_shoulder">Ombros</string>
    <string name="exercise_triceps">Triceps</string>

    <!-- GAME STRINGS -->
    <string name="game_bgimage_desc">Background image</string>
    <string name="game_dog_desc">Dog</string>
    <string name="game_exit_desc">Return</string>
    <string name="game_shop_desc">Shop</string>
    <string name="game_rank_desc">Rankings</string>
    <string name="game_start_game">START GAME</string>
    <string name="game_no_powerups">No Power-Ups Active</string>
    <string name="game_powerups">Current Power-Ups:</string>
    <string name="game_distance_travelled">Travelled Distance: </string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_news_display">Notícia</string>
    <string name="title_activity_meal_display">Refeição</string>

    <!-- AUTH -->
    <string name="facebook_app_id">570057796770794</string>
    <string name="fb_login_protocol_scheme">fb570057796770794</string>
    <string name="no_internet">There is no Internet connection, some features maybe disabled!</string>
    <string name="auth_welcome">Welcome</string>
    <string name="fgm_meals_title">Calorias diárias</string>
    <string name="fgm_meals_run">Gerar</string>
    <string name="fgm_meals_breakfast">Pequeno-Almoço</string>
    <string name="fgm_meals_morning_lunch">Lanche da manhã</string>
    <string name="fgm_meals_lunch">Almoço</string>
    <string name="fgm_meals_snack">Lanche</string>
    <string name="fgm_meals_dinner">Jantar</string>
    <string name="fgm_meals_supper">Snack</string>
    <string name="fgm_add_meals_btn">Adicionar</string>
    <string name="fgm_add_meals_photo">Adicionar Foto</string>

    <string name="exercise_hipopressive_abdominal">Hipopressive Abdominal</string>
    <string name="exercise_side_board">Side Board</string>
    <string name="exercise_frontal_board">Frontal Board</string>
    <string name="exercise_modified_bicycle">Modified Bicycle</string>
    <string name="exercise_inverted_abdominal">Inverted Abdominal</string>
    <string name="exercise_abs_hipopressive_abs">Os abdominais hipopressivos reforçam os músculos da faixa abdominal e pélvica com a ajuda dos músculos da respiração (ex. diafragma)</string>
    <string name="exercise_abs_side_board">A prancha lateral atinge todas as partes do teu corpo, permitindo que trabalhes algumas zonas problemáticas e que corrijas algumas falhas de equilíbrio.</string>
    <string name="exercise_abs_frontal_board">A prancha é um excelente exercício para trabalhar todo o tronco e pode estimular até 130% mais a zona abdominal do que propriamente fazer abdominais.</string>
    <string name="exercise_abs_ground_bike">Este movimento estimula aproximadamente 190% mais a tua zona abdominal do que fazer abdominais.</string>
    <string name="exercise_abs_inverted_abs">Este exercício deverá activar 140% mais os teus abdominais do que fazer abdominais simples.</string>
    <string name="exercise_abs_hanging_leg_raise">Hanging Leg Raise Or Knee Raise</string>
    <string name="exercise_abs_kneeling_cable_crunch">Kneeling Cable Crunch</string>
    <string name="seconds">Segundos</string>
    <string name="exercise_back_chinup">Chinups</string>
    <string name="exercise_back_deadlift">Deadlift</string>
    <string name="exercise_back_bent_over_barbell_deadlift">Bent-Over Barbell Deadlift</string>
    <string name="exercise_back_pulldown">Pulldown</string>
    <string name="exercise_back_wide_grip_pull_up">Wide-Grip Pull-Up</string>
    <string name="exercise_back_wide_grip_seated_cable_row">Wide-Grip Seated Cable Row</string>
    <string name="exercise_back_standing_t_bar_row">Standing T-Bar Row</string>
    <string name="exercise_biceps_overhead_cable_curl">Overhead Cable Curl</string>
    <string name="exercise_biceps_wide_grip_standing_curl">Wide Grip Standing Curl</string>
    <string name="exercise_biceps_zottman_curl">Zottman Curl</string>
    <string name="exercise_biceps_dumbell_biceps_curl">dumbbell Biceps Curl</string>
    <string name="exercise_biceps_incline_dumbbell_hammer_curl">Incline Dumbbell Hammer Curl</string>
    <string name="exercise_biceps_incline_inner_biceps_curl">Incline Inner-Biceps Curl</string>
    <string name="exercise_biceps_regular_grip_barbell_curl">Regular-Grip Barbell Curl</string>
    <string name="exercise_chest_bench_press_dumbell">Bench Press Dumbbell</string>
    <string name="exercise_chest_bench_press">Bench Press</string>
    <string name="exercise_chest_weighted_push_ups">Weighted Push Ups</string>
    <string name="exercise_chest_reverse_grip_bench_press">Reverse Grip Bench Press</string>
    <string name="exercise_chest_barbell_bench_press">Barbell Bench Press</string>
    <string name="exercise_chest_flat_bench_dumbbell_press">Flat Bench Dumbbell Press</string>
    <string name="exercise_chest_low_incline_barbell_bench_press">Low-Incline Barbell Bench Press</string>
    <string name="exercise_shoulder_cable_reverse_flye">Cable Reverse Flye</string>
    <string name="exercise_shoulder_bent_over_over_dumbbell_lateral_raise">Bent-Over Dumbbell Lateral Raise</string>
    <string name="exercise_shoulder_one_arm_cable_lateral_raise">One-Arm Cable Lateral Raise</string>
    <string name="exercise_shoulder_cable_front_raise">Cable Front Raise</string>
    <string name="exercise_shoulder_push_press">Push Press</string>
    <string name="exercise_shoulder_wide_grip_smith_machine_upright_row">Wide-Grip Smith-Machine Upright Row</string>
    <string name="exercise_shoulder_face_pull">Face Pull</string>
    <string name="exercise_shoulder_dumbbell_lateral_raise">Dumbbell Lateral Raise</string>
    <string name="exercise_shoulder_seated_barbell_shoulder_press">Seated Barbell Shoulder Press</string>
    <string name="exercise_shoulder_seated_dumbbell_shoulder_press">Seated Dumbbell Shoulder Press</string>
    <string name="exercise_triceps_triangle_pushup">Triangle Pushups</string>
    <string name="exercise_triceps_kickbacks">Kickbacks</string>
    <string name="exercise_triceps_dips">Dips</string>
    <string name="exercise_triceps_overhead_triceps_extension">Overhead Triceps Extension</string>
    <string name="exercise_triceps_rope_pushdown">Rope Pushdown</string>
    <string name="exercise_triceps_bar_pushdown">Bar Pushdown</string>
    <string name="exercise_triceps_lying_barbell_triceps_extension">Lying Barbell Triceps Extensions</string>
    <string name="exercise_triceps_close_grip_press">Close Grip Bench Press</string>
    <string name="exercise_new">Novo</string>
    <string name="calendar_personal_trainer">Personal Trainer</string>
    <string name="calendar_monday">Seg</string>
    <string name="calendar_tuesday">Terç</string>
    <string name="calendar_wednesday">Qua</string>
    <string name="calendar_thursday">Qui</string>
    <string name="calendar_friday">Sex</string>
    <string name="calendar_saturday">Sab</string>
    <string name="calendar_sunday">Dom</string>
    <string name="calendar_event_title">Título</string>
    <string name="calendar_all_day">O dia todo</string>
    <string name="calendar_start_date">Início</string>
    <string name="calendar_end_date">Fim</string>
    <string name="calendar_add_start_date">Adicionar Data de início</string>
    <string name="calendar_add_end_date">Adicionar Data de fim</string>

    <!--<string name="exercise_shoulder_"-->
    <string name="get_directions">Obter Direcções</string>
    <string name="no_navigation_app">Não existe uma aplicação de navegação instalada.</string>
    <string name="title_fragment_news_display">Notícias</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
