<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/breakfast"
            android:title="@string/diet_breakfast"
            android:checkable="true" />

        <item android:id="@+id/brunch"
            android:title="@string/diet_brunch"
            android:checkable="true" />
        <item android:id="@+id/lunch"
            android:title="@string/diet_lunch"
            android:checkable="true" />
        <item android:id="@+id/afterlunch"
            android:title="@string/diet_afterLunch"
            android:checkable="true" />
        <item android:id="@+id/dinner"
            android:title="@string/diet_dinner"
            android:checkable="true" />
        <item android:id="@+id/supper"
            android:title="@string/diet_supper"
            android:checkable="true" />
</menu>