<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/vector_exercise"
        android:title="@string/nav_exercice" />

    <item
        android:id="@+id/navigation_diet"
        android:icon="@drawable/vector_diet"
        android:title="@string/nav_diet" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/vector_calendar"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/vector_map"
        android:title="@string/nav_map" />

    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/vector_game"
        android:title="@string/nav_game" />
</menu>
